# freode

./: .gitattributes  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  EULA  README.md  entry.cpp  flash.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  crash-report.yml  feature-request.yml
.github/actions/build-debug-info-post/: action.yml
.github/workflows/: build.yml  draft.yml  update-site.yml
cmake/: GeodeFile.cmake  Platform.cmake  PlatformDetect.cmake
installer/mac/: package.sh
installer/mac/Scripts/: postinstall
installer/windows/: installer.nsi
installer/windows/Language Files/: CzechExtra.nsh  EnglishExtra.nsh  FinnishExtra.nsh  FrenchExtra.nsh  GermanExtra.nsh  GreekExtra.nsh  JapaneseExtra.nsh  KoreanExtra.nsh  PolishExtra.nsh  PortugueseBRExtra.nsh  PortugueseExtra.nsh  RussianExtra.nsh  SimpChineseExtra.nsh  SpanishExtra.nsh  SpanishInternationalExtra.nsh  SwedishExtra.nsh  TradChineseExtra.nsh  TurkishExtra.nsh  UkrainianExtra.nsh
loader/: CMakeLists.txt  README.md
loader/include/Geode/: Bindings.hpp  DefaultInclude.hpp  Loader.hpp  Modify.hpp  Prelude.hpp
loader/include/Geode/c++stl/: gdstdlib.hpp  gnustl-map.hpp  gnustl.hpp  string.hpp
loader/include/Geode/c++stl/gnustl/: alloc_traits.h  allocator.h  c++allocator.hpp  c++config.h  cpp_type_traits.h  functional_hash.h  hash_bytes.h  hash_specialization.hpp  hashtable.h  hashtable_policy.h  memoryfwd.h  move.h  predefined_ops.h  ptr_traits.h  range_access.h  stl_algobase.h  stl_function.h  stl_iterator.h  stl_iterator_base_funcs.h  stl_iterator_base_types.h  stl_pair.h  (+5 more)
loader/include/Geode/cocos/: CCCamera.h  CCConfiguration.h  CCDirector.h  CCScheduler.h  CMakeLists.txt
loader/include/Geode/loader/: Dirs.hpp  Dispatch.hpp  Event.hpp  EventV2.hpp  GameEvent.hpp  Hook.hpp  IPC.hpp  Loader.hpp  Log.hpp  Mod.hpp  ModEvent.hpp  ModMetadata.hpp  ModSettingsManager.hpp  Setting.hpp  SettingV3.hpp  Tulip.hpp  Types.hpp
loader/include/Geode/modify/: AsStaticFunction.hpp  Comparer.hpp  Field.hpp  IDManager.hpp  Modify.hpp  Traits.hpp
loader/include/Geode/platform/: ItaniumCast.hpp  android.hpp  cplatform.h  ios.hpp  macos.hpp  platform.hpp  windows.hpp
loader/include/Geode/ui/: BasedButton.hpp  BasedButtonSprite.hpp  Border.hpp  ColorPickPopup.hpp  EnterLayerEvent.hpp  General.hpp  GeodeUI.hpp  IconButtonSprite.hpp  Layout.hpp  ListView.hpp  LoadingSpinner.hpp  MDPopup.hpp  MDTextArea.hpp  Notification.hpp  Popup.hpp  SceneManager.hpp  ScrollLayer.hpp  Scrollbar.hpp  SelectList.hpp  SimpleAxisLayout.hpp  SpacerNode.hpp  TextArea.hpp  TextInput.hpp  TextRenderer.hpp
loader/include/Geode/utils/: ColorProvider.hpp  JsonValidation.hpp  NodeIDs.hpp  ObjcHook.hpp  SeedValue.hpp  Task.hpp  VersionInfo.hpp  addresser.hpp  async.hpp  casts.hpp  cocos.hpp  file.hpp  function.hpp  general.hpp  map.hpp  permission.hpp  ranges.hpp  string.hpp  terminate.hpp  timer.hpp  web.hpp
loader/launcher/mac/: CMakeLists.txt
loader/launcher/windows/: CMakeLists.txt  Updater.cpp  proxyLoader.cpp
loader/resources/: about.md.in  mod.json.in  support.md.in
loader/src/: load.cpp  load.hpp  load.mm
loader/src/c++stl/: string-impl.hpp  string.cpp
loader/src/cocos2d-ext/: AnchorLayout.cpp  AxisLayout.cpp  CCClippingNode.cpp  CCFileUtils.cpp  CCKeyboardDispatcher.cpp  CCKeyboardHandler.cpp  CopySizeLayout.cpp  Layout.cpp  SimpleAxisLayout.cpp  SpacerNode.cpp  ZipUtils.cpp
loader/src/cocos2d-ext/zip/: ioapi.cpp
loader/src/hooks/: AddExtraKeys.cpp  AddExtraKeys.mm  AndroidExceptionFix.cpp  AndroidSaveFix.cpp  CCMenuItemActivateFix.cpp  CCSceneCrashFix.cpp  CompileShaderFix.cpp  DynamicCastFix.cpp  FMODFix.cpp  GeodeNodeMetadata.cpp  ImpostorPlayLayerFix.cpp  LoadingLayer.cpp  MenuLayer.cpp  MessageBoxFix.cpp  ProfilePageFix.cpp  TextInputNodeFix.cpp  WindowsFontCacheFix.cpp  persist.cpp  save.cpp  update.cpp
loader/src/ids/: IDManager.cpp  LoadingLayer.cpp  MenuLayer.cpp
loader/src/internal/: FileWatcher.hpp  FixModIssues.cpp  about.cpp.in  about.hpp  crashlog.cpp  crashlog.hpp
loader/src/loader/: CopyButtonSetting.cpp  CopyButtonSetting.hpp  Dirs.cpp  Dispatch.cpp  Event.cpp  GameEvent.cpp  Hook.cpp  HookImpl.cpp  HookImpl.hpp  IPC.cpp  IPC.hpp  Loader.cpp  LoaderImpl.cpp  LoaderImpl.hpp  Log.cpp  LogImpl.hpp  Mod.cpp  ModEvent.cpp  ModImpl.cpp  ModImpl.hpp  ModMetadataImpl.cpp  ModMetadataImpl.hpp  ModPatch.cpp  ModPatch.hpp  ModSettingsManager.cpp  Patch.cpp  PatchImpl.cpp  PatchImpl.hpp  SettingNode.hpp  SettingNodeV3.cpp  SettingNodeV3.hpp  SettingV3.cpp  Tulip.cpp  console.hpp  updater.cpp  updater.hpp
loader/src/platform/android/: IPC.cpp  LoaderImpl.cpp  ModImpl.cpp  console.cpp  crashlog.cpp  gdstdlib.cpp  input.cpp  internalString.hpp  main.cpp  util.cpp
loader/src/platform/ios/: LoaderImpl.mm  crashlog.mm  main.mm  util.mm
loader/src/platform/mac/: Cocos2d.cpp  LoaderImpl.mm  ModImpl.cpp  crashlog.mm  main.mm  util.mm
loader/src/platform/windows/: FileWatcher.cpp  IPC.cpp  LoaderImpl.cpp  ModImpl.cpp  console.cpp  crashlog.cpp  crashlogWindow.cpp  gdTimestampMap.hpp  info.rc.in  main.cpp  nfdwin.cpp  nfdwin.hpp  util.cpp
loader/src/server/: DownloadManager.cpp  Server.cpp  Server.hpp
loader/src/ui/: GeodeUI.cpp  GeodeUIEvent.cpp  GeodeUIEvent.hpp
loader/src/ui/mods/: GeodeStyle.cpp  GeodeStyle.hpp  ModsLayer.cpp  ModsLayer.hpp  SwelvyBG.cpp  SwelvyBG.hpp  UpdateModListState.hpp
loader/src/ui/nodes/: BasedButton.cpp  BasedButtonSprite.cpp  Border.cpp  ColorPickPopup.cpp  EnterLayerEvent.cpp  General.cpp  IconButtonSprite.cpp  ListView.cpp  LoadingSpinner.cpp  MDPopup.cpp  MDTextArea.cpp  Notification.cpp  Popup.cpp  SceneManager.cpp  ScrollLayer.cpp  Scrollbar.cpp  TextArea.cpp  TextInput.cpp  TextRenderer.cpp
loader/src/utils/: ColorProvider.cpp  JsonValidation.cpp  PlatformID.cpp  VersionInfo.cpp  addresser.cpp  cocos.cpp  file.cpp  general.cpp  string.cpp  terminate.cpp  thread.cpp  thread.hpp  time.cpp  web.cpp
loader/test/: CMakeLists.txt
loader/test/dependency/: CMakeLists.txt  main.cpp  main.hpp  mod.json.in
loader/test/main/: CMakeLists.txt  main.cpp  mod.json.in
(+188 files in other folders)
